# FoxCode

./: .foxcode.toml.example  .gitignore  README.md  README_EN.md  README_JA.md  README_RU.md  README_TW.md  TOOLS_AUDIT_REPORT.md  _test_edit_debug.py  _test_edit_debug2.py  _test_edit_protection.py  _test_edit_tool.py  count_lines.py  pyproject.toml  test_parse.py  test_skill_generator.py  tui_smoke_test.py  tui_test_err.txt
.github/workflows/: publish.yml
LICENSE/: LICENSE
src/foxcode/: __init__.py  cli.py
src/foxcode/commands/: __init__.py  command.py  help.py  prompt.py  tool.py
src/foxcode/context/: context_bridge.py  context_compressor.py  context_reset.py
src/foxcode/core/: __init__.py  advanced_debugger.py  agent.py  code_formatter.py  command_manager.py  comment_parser.py  comment_protect_manager.py  comment_protector.py  company_mode.py  company_mode_config.py  config.py  config_validator.py  context_bridge.py  context_compressor.py  context_reset.py  dependency_resolver.py  doc_generator.py  encoding.py  enhanced_tools.py  error_analyzer.py  evaluator.py  feature_list.py  git_advanced_ops.py  handoff.py  hooks.py  init_script.py  knowledge_base.py  mcp.py  mcp_installer.py  message.py  multimodal_processor.py  open_space.py  orchestrator.py  performance_analyzer.py  process_watchdog.py  progress.py  project_analyzer.py  providers.py  qqbot_logger.py  qqbot_service.py  (+17 more)
src/foxcode/core/hooks/: __init__.py  app_hooks.py  base.py  command_hooks.py  config_hooks.py  service_hooks.py  session_hooks.py  skill_hooks.py  tool_hooks.py  work_mode_hooks.py
src/foxcode/design_md/: __init__.py  cli.py  design_mode.py  lint.py  spec_config.py  utils.py
src/foxcode/design_md/dtcg/: handler.py  spec.py
src/foxcode/design_md/fixer/: handler.py  spec.py
src/foxcode/design_md/linter/: runner.py  spec.py
src/foxcode/design_md/model/: handler.py  spec.py
src/foxcode/design_md/parser/: handler.py  spec.py
src/foxcode/design_md/spec_gen/: helpers.py  renderers.py  spec.py
src/foxcode/design_md/tailwind/: handler.py  spec.py
src/foxcode/gui/: __init__.py  app.py  main_window.py
src/foxcode/gui/components/: __init__.py  icons.py
src/foxcode/gui/editor/: __init__.py  editor_page.py  monaco_bridge.py
src/foxcode/gui/pages/: __init__.py
src/foxcode/gui/services/: __init__.py
src/foxcode/gui/styles/: __init__.py
src/foxcode/gui/utils/: __init__.py
src/foxcode/pyside_gui/: __init__.py  app.py  icons.py  main_window.py  theme.py
src/foxcode/pyside_gui/widgets/: chat_area.py  (+4 more)
src/foxcode/services/: mcp.py  mcp_installer.py
src/foxcode/tools/: __init__.py  ai_tools.py  base.py  code_tools.py  design_tools.py  file_tools.py  mcp_tools.py  playwright_tools.py  shell_tools.py
src/foxcode/tui/: __init__.py  app.py  icons.py  styles.tcss  theme.py
src/foxcode/types/: message.py
src/foxcode/utils/: ainotread.py  encoding.py  error_logger.py  statistics.py
tests/core/: test_comment_blackbox.py  test_comment_parser.py  test_comment_performance.py  test_comment_protect_manager.py  test_comment_protector.py  test_comment_regression.py  test_comment_stress.py
tests/design_md/: test_spec_config.py
tests/design_md/linter/: test_runner.py
tests/design_md/model/: test_handler.py  test_spec.py
tests/design_md/parser/: test_handler.py
tests/tui/: test_sidebar.py
tests/utils/: test_ainotread.py
(+39 files in other folders)
